# bangi

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yml  fill_disk_utilization.py  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: pr-pipelines.yaml  release.yaml
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/cis/: config.yaml
_bmad/core/: config.yaml
_bmad/tea/: config.yaml
apps/api/: Dockerfile  Makefile  README.md  env-ci  pyproject.toml  requirements.txt
apps/web/: Dockerfile  README.md  index.html  index.js  package.json
docs/: host-provisioning.md  index.md  project-overview.md  project-parts.json  project-scan-report.json  source-tree-analysis.md
infra/: core.Dockerfile
infra/installer/: install.sh
infra/mariadb/: low-memory.cnf
infra/scripts/: README.md  ingest_disk_utilization.sh  refresh_ip2location_db.sh
migrations/: 001_initial_migration.py  003_business_portfolio_access_url_expires_at_not_null.py  004_click_id_uuid.py  005_report_leads.py
perf/: README.md  mixed_workload.js  observe.sh  process_and_reports_seed.py  run_k6.sh  seed.py  single_endpoint.js
scripts/: README.md  ingest_disk_utilization.sh
src/: api.py  container.py  peewee.py
src/alerts/: __init__.py  enums.py  repositories.py  routes.py  services.py
src/core/: db.py  entities.py  routes.py  services.py  supervisor.py  utils.py
src/facebook_pacs/: entities.py  routes.py  schemas.py  services.py
src/health/: routes.py
tests/: conftest.py
(+182 files in other folders)
